[package]
name = "mqtt-policy"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"
description = "This crate contains MQTT specific plugins for authorization policy engine. See 'policy' crate."

[dependencies]
lazy_static = "1.4"
tracing = "0.1"

mqtt-broker = { path = "../mqtt-broker" }
policy = { path = "../policy" }

